# detect-objects-with-depth-estimation

./: .gitignore  README.md
calibration/src/calibration/: package.xml  setup.cfg  setup.py
calibration/src/calibration/calibration/: publish_camera_info.py  stereo_calibrator.py  stereo_image_saver.py  stereo_image_saver_node.py  synced_stereo_image_saver.py  user_input_node.py
calibration/src/calibration/data/intrinsic/: 07-21-2020-12:41:09.yaml  07-21-2020-14:49:16.yaml  camera_info.yaml  old_camera_info.yaml
calibration/src/calibration/launch/: publish_stereo_info.launch.py  publish_synced_stereo_info.launch.py  stereo_img_saver_server.launch.py  synced_stereo_img_saver_server.launch.py
calibration/src/calibration/scripts/: collect_calibration_data.sh
detector/detector/src/bringup/: CMakeLists.txt  package.xml
detector/detector/src/bringup/launch/: detector.launch.py
detector/detector/src/detection/: package.xml  setup.cfg  setup.py
detector/detector/src/detection/checkpoints/yolov4-tiny-416/: saved_model.pb
detector/detector/src/detection/checkpoints/yolov4-tiny-416/variables/: variables.index
detector/detector/src/detection/checkpoints/yolov4-tiny-trt-fp16-416/variables/: variables.index
detector/detector/src/detection/detection/: detection_main.py  detection_node.py  detectvideo.py
detector/detector/src/detection/detection/core/: backbone.py  common.py  config.py  dataset.py  utils.py  yolov4.py
detector/detector/src/detector_msg/: CMakeLists.txt  package.xml
detector/detector/src/detector_msg/msg/: DispInfo.msg
detector/detector/src/perception/: CMakeLists.txt  package.xml
detector/detector/src/perception/include/perception/: stereo_image_processor.hpp  uvc_driver.hpp
detector/detector/src/perception/src/: perception_main.cpp  processor_main.cpp  stereo_image_processor.cpp  uvc_driver.cpp
dockerfiles/: Dockerfile.detector  bringup-launch.yaml
