<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>calibration</name>
  <version>1.0.0</version>
  <description>
    Calibration capabilities for Detection and Depth estimation in ROS2
  </description>
  <maintainer email="sieniven@gmail.com">niven</maintainer>
  <license>Apache License 2.0</license>
  <url type="repository">https://github.com/sieniven/detect-obstacles-ros</url>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
