<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bringup</name>
  <version>1.0.0</version>
  <description>
    Detection and Depth estimation in ROS2
  </description>
  <maintainer email="sieniven@gmail.com">niven</maintainer>
  <license>Apache License 2.0</license>
  <url type="repository">https://github.com/sieniven/detect-obstacles-ros</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>perception</exec_depend>
  <exec_depend>detection</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
